# fastapi_computer_accounting_system

./: data.json  main.py  pyproject.toml  report.xlsx  requirements.txt  test_data (4).json
app/admin/: router.py
app/auth/: auth.py  router.py
app/dao/: base.py
app/operations/: dao.py  router.py  schemas.py
app/superadmin/: router.py
app/utils/: database.py
templates/: add_data.html  add_data_computer.html  add_data_computercomponent.html  add_data_departments.html  add_data_employee.html  add_order.html  admin.html  admin_assigned.html  delete_data.html  delete_data_computer.html  delete_data_computercomponent.html  delete_data_departments.html  delete_data_employee.html  home.html  home_admin.html  login.html  order_page.html  register.html  superadmin.html  waiting_approval.html
